fix: change benefits of an gia insurance

--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -173,393 +173,7 @@
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Quyền lợi chính</p>
       <div style="max-width: 100%; overflow-x: scroll;">
-        <table border="0" cellpadding="0" cellspacing="0" style="width:100%" class="table table-bordered">
-          <thead>
-            <tr>
-              <th scope="col">CHƯƠNG TRÌNH BẢO HIỂM</th>
-              <th scope="col">ĐỒNG</th>
-              <th scope="col">BẠC</th>
-              <th scope="col">VÀNG</th>
-              <th scope="col">BẠCH KIM</th>
-              <th scope="col">KIM CƯƠNG</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td colspan="6"><strong>A. QUYỀN LỢI BẢO HIỂM CHÍNH - Chi phí y tế nội trú do ốm bệnh, tai nạn</strong>
-              </td>
-            </tr>
-            <tr>
-              <td>1. Tổng hạn mức quyền lợi bảo hiểm chính</td>
-              <td>
-                <p style="margin:0;">93.800.000đ/người/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">137.600.000đ/người/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">230.000.000đ/người/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">342.000.000đ/người/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">454.000.000đ/người/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>2. Phạm vi lãnh thổ</td>
-              <td>
-                <p style="margin:0;">Việt Nam</p>
-              </td>
-              <td>
-                <p style="margin:0;">Việt Nam</p>
-              </td>
-              <td>
-                <p style="margin:0;">Việt Nam</p>
-              </td>
-              <td>
-                <p style="margin:0;">Việt Nam</p>
-              </td>
-              <td>
-                <p style="margin:0;">Việt Nam</p>
-              </td>
-            </tr>
-            <tr>
-              <td style="height:25px; width:150px">3. Chi phí nằm viện</td>
-              <td style="height:25px; width:150px">
-                <p style="margin:0;">2.000.000đ/ngày</p>
-
-                <p style="margin:0;">Tối đa&nbsp;40.000.000đ/năm</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-              <td style="height:25px; width:150px">
-                <p style="margin:0;">3.000.000đ/ngày</p>
-
-                <p style="margin:0;">Tối đa&nbsp;60.000.000/năm</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-              <td style="height:25px; width:150px">
-                <p style="margin:0;">5.000.000đ/ngày</p>
-
-                <p style="margin:0;">Tối đa&nbsp;100.000.000đ/năm</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-              <td style="height:25px; width:150px">
-                <p style="margin:0;">7.500.000đ/ngày</p>
-
-                <p style="margin:0;">Tối đa&nbsp;150.000.000đ/năm</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-              <td style="height:25px; width:150px">
-                <p style="margin:0;">10.000.000đ/ngày</p>
-
-                <p style="margin:0;">Tối đa&nbsp;200.000.000đ/năm</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>4. Chi phí khám và điều trị</td>
-              <td>
-                <p style="margin:0;">2.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">3.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">5.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">7.500.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>5. Chi phí tái khám và điều trị</td>
-              <td>
-                <p style="margin:0;">2.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">3.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">5.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">7.500.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>6. Dịch vụ xe cứu thương bằng đường bộ</td>
-              <td>
-                <p style="margin:0;">5.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">5.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>7. Chi phí Phẫu thuật</td>
-              <td>
-                <p style="margin:0;">40.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">60.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">100.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">150.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">200.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>8. Phục hồi chức năng</td>
-              <td>
-                <p style="margin:0;">4.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">6.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">15.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">20.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>9. Trợ cấp bệnh viện công</td>
-              <td>
-                <p style="margin:0;">80.000đ/ ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">120.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">200.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">300.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">400.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá 60 ngày/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>10. Trợ cấp mai táng phí trong trường hợp tử vong tại bênh viện</td>
-              <td>
-                <p style="margin:0;">500.000đ/vụ</p>
-              </td>
-              <td>
-                <p style="margin:0;">500.000đ/vụ</p>
-              </td>
-              <td>
-                <p style="margin:0;">500.000đ/vụ</p>
-              </td>
-              <td>
-                <p style="margin:0;">500.000đ/vụ</p>
-              </td>
-              <td>
-                <p style="margin:0;">500.000đ/vụ</p>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="6"><strong>B. QUYỀN LỢI BẢO HIỂM BỔ SUNG</strong></td>
-            </tr>
-            <tr>
-              <td>1. Điều trị ngoại trú do ốm bệnh, tai nạn</td>
-              <td>
-                <p style="margin:0;">6.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">6.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">6.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">15.000.000đ/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>- Giới hạn /lần khám</td>
-              <td>
-                <p style="margin:0;">1.200.000đ/lần</p>
-
-                <p style="margin:0;">Không quá&nbsp;10&nbsp;lần/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">1.200.000đ/lần</p>
-
-                <p style="margin:0;">Không quá&nbsp;10&nbsp;lần/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">1.200.000đ/lần</p>
-
-                <p style="margin:0;">Không quá&nbsp;10&nbsp;lần/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">2.000.000đ/lần</p>
-
-                <p style="margin:0;">Không quá&nbsp;10&nbsp;lần/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">3.000.000đ/lần</p>
-
-                <p style="margin:0;">Không quá&nbsp;10&nbsp;lần/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>- Điều trị vật lý trị liệu</td>
-              <td>
-                <p style="margin:0;">50.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60 ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">50.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">50.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">100.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">150.000đ/ngày</p>
-
-                <p style="margin:0;">Không quá&nbsp;60&nbsp;ngày/năm</p>
-              </td>
-            </tr>
-            <tr>
-              <td>2. BH Tai nạn cá nhân (TNCN)</td>
-              <td>
-                <p style="margin:0;">Tối đa&nbsp;1.000.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa&nbsp;1.000.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa&nbsp;1.000.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa&nbsp;1.000.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa&nbsp;1.000.000.000đ</p>
-              </td>
-            </tr>
-            <tr>
-              <td>3. BH Sinh mạng cá nhân (SMCN)</td>
-              <td>
-                <p style="margin:0;">Tối đa 300.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa 300.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa 300.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa 300.000.000đ</p>
-              </td>
-              <td>
-                <p style="margin:0;">Tối đa 300.000.000đ</p>
-              </td>
-            </tr>
-            <tr>
-              <td>4. BH Nha khoa</td>
-              <td>
-                <p style="margin:0;">2.000.000đ/năm&nbsp;</p>
-
-                <p style="margin:0;">1.000.000đ/lần khám</p>
-              </td>
-              <td>
-                <p style="margin:0;">2.000.000đ/năm</p>
-
-                <p style="margin:0;">1.000.000đ/lần khám</p>
-              </td>
-              <td>
-                <p style="margin:0;">5.000.000đ/năm</p>
-
-                <p style="margin:0;">2.500.000đ/lần khám</p>
-              </td>
-              <td>
-                <p style="margin:0;">10.000.000đ/năm</p>
-
-                <p style="margin:0;">5.000.000đ/lần khám</p>
-              </td>
-              <td>
-                <p style="margin:0;">15.000.000đ/năm</p>
-
-                <p style="margin:0;">7.500.000đ/lần khám</p>
-              </td>
-            </tr>
-            <tr>
-              <td>5. BH Thai sản</td>
-              <td>
-                <p style="margin:0;">Không</p>
-              </td>
-              <td>
-                <p style="margin:0;">21.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">21.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">21.000.000đ/năm</p>
-              </td>
-              <td>
-                <p style="margin:0;">31.500.000đ/năm</p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <img src="assets/san-pham/quyenloibaohiemangia.png" style="width: 100%; height: auto;" />
       </div>
     </div>
 
