fix: add new news

--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -132,9 +132,32 @@
 
     <div style="max-width: 900px; margin: auto; margin-top: 20px;">
       <div class="news-list" style="display: flex; flex-direction: column; gap: 20px;">
+        <!-- News Card: 5 lý do chọn Bảo hiểm An Gia (Newest) -->
+        <div class="news-item"
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
+            src="assets/tin-tuc/5-ly-do-nen-chon-bao-hiem/image3.jpg"
+            alt="5 lý do chọn Bảo hiểm An Gia cho cả gia đình" />
+          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">5 lý do
+            nên chọn Bảo hiểm Bảo Việt An Gia cho cả gia đình</h3>
+          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Khám phá những lợi ích vượt trội của gói bảo
+            hiểm sức khỏe Bảo Việt An Gia: quyền lợi đa dạng, linh hoạt, bảo vệ toàn diện cho mọi thành viên trong gia
+            đình Việt...</p>
+          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
+            <span
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SẢN
+              PHẨM - DỊCH VỤ</span>
+            <span style="color: #999; font-size: 14px;">25.07.2025</span>
+          </div>
+          <a href="./5-ly-do-chon-bao-hiem-an-gia.html"
+            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
+            Xem chi tiết
+            <span style="font-size: 16px;">→</span>
+          </a>
+        </div>
         <!-- Featured Article - Community Responsibility -->
         <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
           <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
             src="assets/tin-tuc/trachnhiemcongdong/image2.jpg" alt="Bảo Việt và trách nhiệm cộng đồng" />
           <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Chung
@@ -144,7 +167,7 @@
             chăm sóc sức khỏe và cứu trợ thiên tai. Chung tay vì cộng đồng, lan tỏa yêu thương...</p>
           <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
             <span
-              style="background: #064278; color: white; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">HOẠT
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">HOẠT
               ĐỘNG TẬP ĐOÀN</span>
             <span style="color: #999; font-size: 14px;">28.05.2025</span>
           </div>
@@ -155,7 +178,7 @@
           </a>
         </div>
         <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: white; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
           <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
             src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang5.jpg" alt="Bảo Việt Đà Nẵng giải pháp toàn diện" />
           <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Bảo Việt
@@ -165,7 +188,7 @@
             đáp ứng mọi nhu cầu của gia đình Việt...</p>
           <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
             <span
-              style="background: #f0f8ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SẢN
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SẢN
               PHẨM - DỊCH VỤ</span>
             <span style="color: #999; font-size: 14px;">24.02.2025</span>
           </div>
@@ -176,7 +199,7 @@
           </a>
         </div>
         <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: white; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
           <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
             src="assets/tin-tuc/co-nen-mua-bang-gia-2025/image4.jpg" alt="Bảo hiểm sức khỏe Bảo Việt 2025" />
           <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Có nên
@@ -186,7 +209,7 @@
             năm 2025...</p>
           <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
             <span
-              style="background: #fff5f5; color: #e53e3e; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SỨC
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SỨC
               KHỎE</span>
             <span style="color: #999; font-size: 14px;">15.01.2025</span>
           </div>
@@ -197,7 +220,7 @@
           </a>
         </div>
         <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: white; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
           <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
             src="assets/tin-tuc/an-tam-hoach-dinh/image3.jpg" alt="Bảo hiểm An Tâm Hoạch Định" />
           <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Bảo hiểm
@@ -207,7 +230,7 @@
             vàng...</p>
           <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
             <span
-              style="background: #f0fff4; color: #38a169; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">GIÁO
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">GIÁO
               DỤC</span>
             <span style="color: #999; font-size: 14px;">10.12.2024</span>
           </div>
@@ -218,7 +241,7 @@
           </a>
         </div>
         <div class="news-item"
-          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: white; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
           <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
             src="assets/tin-tuc/bao-hiem-chay-no/images/image6.jpg"
             alt="Nghị định chính phủ về bảo hiểm cháy nổ 2025" />
@@ -229,7 +252,7 @@
             quyền lợi và hướng dẫn mua bảo hiểm uy tín tại Đà Nẵng.</p>
           <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
             <span
-              style="background: #fef5e7; color: #d69e2e; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">PHÁP
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">PHÁP
               LUẬT</span>
             <span style="color: #999; font-size: 14px;">01.07.2025</span>
           </div>
