--- a/5-ly-do-chon-bao-hiem-an-gia.html
+++ b/5-ly-do-chon-bao-hiem-an-gia.html
@@ -4,34 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng - Hành Trình Nhân Ái Vì Cộng Đồng</title>
+  <title>5 lý do chọn Bảo hiểm An Gia cho cả gia đình | Bảo Việt Đà Nẵng</title>
   <meta name="description"
-    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện, giáo dục, chăm sóc sức khỏe và cứu trợ thiên tai. Chung tay vì cộng đồng, lan tỏa yêu thương.">
+    content="Khám phá 5 lý do nên chọn Bảo hiểm sức khỏe An Gia của Bảo Việt: quyền lợi đa dạng, linh hoạt, bảo vệ toàn diện cho mọi thành viên trong gia đình Việt. Tìm hiểu bảng giá, quyền lợi và hướng dẫn đăng ký.">
   <meta name="keywords"
-    content="Bảo Việt Đà Nẵng, trách nhiệm cộng đồng, thiện nguyện, giáo dục, chăm sóc sức khỏe, cứu trợ thiên tai, bảo hiểm Bảo Việt">
+    content="bảo hiểm an gia, bảo hiểm sức khỏe, bảo việt an gia, quyền lợi bảo hiểm, bảng giá bảo hiểm, bảo hiểm cho gia đình, bảo hiểm sức khỏe tốt nhất">
   <meta name="author" content="Bảo Việt Đà Nẵng">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#064278">
-
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html">
-
+  <link rel="canonical" href="https://baohiembaovietdanang.vn/5-ly-do-chon-bao-hiem-an-gia.html">
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng - Hành Trình Nhân Ái">
+  <meta property="og:title" content="5 lý do chọn Bảo hiểm An Gia cho cả gia đình | Bảo Việt Đà Nẵng">
   <meta property="og:description"
-    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện, giáo dục, chăm sóc sức khỏe và cứu trợ thiên tai.">
-  <meta property="og:image" content="https://baohiembaovietdanang.vn/assets/tin-tuc/trachnhiemcongdong/image2.jpg">
-  <meta property="og:url" content="https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html">
+    content="Khám phá 5 lý do nên chọn Bảo hiểm sức khỏe An Gia của Bảo Việt: quyền lợi đa dạng, linh hoạt, bảo vệ toàn diện cho mọi thành viên trong gia đình Việt.">
+  <meta property="og:image"
+    content="https://baohiembaovietdanang.vn/assets/tin-tuc/5-ly-do-nen-chon-bao-hiem/image3.jpg">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/5-ly-do-chon-bao-hiem-an-gia.html">
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Bảo Việt Đà Nẵng">
   <meta property="og:locale" content="vi_VN">
-
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng">
+  <meta name="twitter:title" content="5 lý do chọn Bảo hiểm An Gia cho cả gia đình | Bảo Việt Đà Nẵng">
   <meta name="twitter:description"
-    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện vì cộng đồng.">
-  <meta name="twitter:image" content="https://baohiembaovietdanang.vn/assets/tin-tuc/trachnhiemcongdong/image2.jpg">
+    content="Khám phá 5 lý do nên chọn Bảo hiểm sức khỏe An Gia của Bảo Việt: quyền lợi đa dạng, linh hoạt, bảo vệ toàn diện cho mọi thành viên trong gia đình Việt.">
+  <meta name="twitter:image"
+    content="https://baohiembaovietdanang.vn/assets/tin-tuc/5-ly-do-nen-chon-bao-hiem/image3.jpg">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
