--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -132,6 +132,28 @@
 
     <div style="max-width: 900px; margin: auto; margin-top: 20px;">
       <div class="news-list" style="display: flex; flex-direction: column; gap: 20px;">
+        <!-- News Card: Bảo hiểm ô tô mới nhất -->
+        <div class="news-item"
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
+            src="assets/tin-tuc/baohiemoto/image2.jpg" alt="Bảo hiểm vật chất xe ô tô Bảo Việt" />
+          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Bảo hiểm
+            vật chất xe ô tô: 6 lưu ý cần biết trước khi mua</h3>
+          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Tìm hiểu chi tiết về bảo hiểm vật chất ô tô Bảo
+            Việt, quyền lợi, phạm vi bảo hiểm, các lưu ý quan trọng và hướng dẫn mua bảo hiểm xe ô tô an toàn, tiết kiệm
+            nhất.</p>
+          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
+            <span
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">Ô
+              TÔ - XE MÁY</span>
+            <span style="color: #999; font-size: 14px;">25.07.2025</span>
+          </div>
+          <a href="./visaonenmuabaohiemoto.html"
+            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
+            Xem chi tiết
+            <span style="font-size: 16px;">→</span>
+          </a>
+        </div>
         <!-- News Card: 5 lý do chọn Bảo hiểm An Gia (Newest) -->
         <div class="news-item"
           style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
