--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -154,6 +154,29 @@
             <span style="font-size: 16px;">→</span>
           </a>
         </div>
+        <!-- News Card: Tổng hợp danh sách các cơ sở y tế không được hưởng bảo hiểm (Newest) -->
+        <div class="news-item"
+          style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+          <img style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;"
+            src="assets/tin-tuc/tonghopbaohiem/image1.jpg"
+            alt="Danh sách các cơ sở y tế không được hưởng bảo hiểm Bảo Việt" />
+          <h3 style="color: #064278; font-weight: bold; margin: 0 0 12px 0; font-size: 18px; line-height: 1.4;">Tổng hợp
+            danh sách các cơ sở y tế không được hưởng bảo hiểm Bảo Việt (Cập nhật 2025)</h3>
+          <p style="color: #666; line-height: 1.6; margin: 0 0 15px 0;">Danh sách các bệnh viện, phòng khám, cơ sở y tế
+            không thuộc phạm vi chi trả bảo hiểm của Bảo Việt. Cập nhật mới nhất, hotline hỗ trợ và hướng dẫn tra cứu
+            chi tiết.</p>
+          <div style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
+            <span
+              style="background: #e6f7ff; color: #064278; padding: 4px 12px; border-radius: 20px; font-size: 12px; font-weight: 500;">SỨC
+              KHỎE</span>
+            <span style="color: #999; font-size: 14px;">25.07.2025</span>
+          </div>
+          <a href="./tonghopdanhsachbenhvienkhonghuongbaohiem.html"
+            style="color: #064278; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 5px; font-size: 15px;">
+            Xem chi tiết
+            <span style="font-size: 16px;">→</span>
+          </a>
+        </div>
         <!-- News Card: 5 lý do chọn Bảo hiểm An Gia (Newest) -->
         <div class="news-item"
           style="border: 1px solid #e0e6ed; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #f7fbff; transition: transform 0.3s ease, box-shadow 0.3s ease;">
