fix: add more service

--- a/dang-ky-tu-van-bao-hiem.html
+++ b/dang-ky-tu-van-bao-hiem.html
@@ -301,6 +301,9 @@
                 <option value="Bảo hiểm sức khoẻ">Bảo hiểm sức khoẻ</option>
                 <option value="Bảo hiểm cháy nổ bắt buộc">Bảo hiểm cháy nổ bắt buộc</option>
                 <option value="Bảo hiểm nhân thọ">Bảo hiểm nhân thọ</option>
+                <option value="Bảo hiểm du lịch">Bảo hiểm du lịch</option>
+                <option value="Bảo hiểm xe máy">Bảo hiểm xe máy</option>
+                <option value="Bảo hiểm intercare">Bảo hiểm intercare</option>
               </select>
               <div class="error-text" data-error="insuranceType"></div>
             </div>
