style: update admin login and dashboard to use primary brand colors
- Change login page gradient from purple to brand blue (#0060ae, #0087d2)
- Update dashboard primary colors to match website theme
- Consistent color scheme across admin interface
- Focus states and interactive elements use brand colors

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -74,12 +74,12 @@
 
     .nav-item:hover {
       background: #4a5568;
-      border-left-color: #667eea;
+      border-left-color: #0060ae;
     }
 
     .nav-item.active {
       background: #4a5568;
-      border-left-color: #667eea;
+      border-left-color: #0060ae;
       color: white;
     }
 
@@ -156,7 +156,7 @@
       border-radius: 12px;
       padding: 1.5rem;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-      border-left: 4px solid #667eea;
+      border-left: 4px solid #0060ae;
     }
 
     .stat-number {
@@ -222,12 +222,12 @@
     }
 
     .btn-primary {
-      background: #667eea;
+      background: #0060ae;
       color: white;
     }
 
     .btn-primary:hover {
-      background: #5a67d8;
+      background: #0056b3;
     }
 
     .btn-success {
@@ -338,7 +338,7 @@
 
     .status-info {
       background: #ebf8ff;
-      color: #2c5aa0;
+      color: #0056b3;
       border: 1px solid #bee3f8;
     }
 
@@ -355,7 +355,7 @@
       height: 32px;
       border: 3px solid #e2e8f0;
       border-radius: 50%;
-      border-top-color: #667eea;
+      border-top-color: #0060ae;
       animation: spin 1s ease-in-out infinite;
       margin-bottom: 1rem;
     }
@@ -397,7 +397,7 @@
     }
 
     .welcome-section {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #0060ae 0%, #0087d2 100%);
       color: white;
       border-radius: 12px;
       padding: 2rem;
