--- a/admin-login.html
+++ b/admin-login.html
@@ -16,7 +16,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #0060ae 0%, #0087d2 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -37,7 +37,7 @@
     .logo {
       width: 80px;
       height: 80px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #0060ae 0%, #0087d2 100%);
       border-radius: 50%;
       margin: 0 auto 2rem;
       display: flex;
@@ -85,9 +85,9 @@
 
     .form-input:focus {
       outline: none;
-      border-color: #667eea;
+      border-color: #0060ae;
       background: white;
-      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+      box-shadow: 0 0 0 3px rgba(0, 96, 174, 0.1);
     }
 
     .password-container {
@@ -113,7 +113,7 @@
 
     .login-btn {
       width: 100%;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #0060ae 0%, #0087d2 100%);
       color: white;
       border: none;
       border-radius: 8px;
@@ -127,7 +127,7 @@
 
     .login-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(102, 126, 234, 0.3);
+      box-shadow: 0 8px 20px rgba(0, 96, 174, 0.3);
     }
 
     .login-btn:active {
@@ -162,7 +162,7 @@
 
     .status-info {
       background: #ebf8ff;
-      color: #2c5aa0;
+      color: #0056b3;
       border: 1px solid #bee3f8;
     }
 
